src/test/contracts/negative/pattern_matching_anomalies/redundant_case/c_c.mligo
type p = Four | Five

type t = One of p | Two of nat | Three

let s (x : t) = 
  match x with
    One Five -> ()
  | One Four -> ()
  | Two c    -> ()
  | Three    -> ()
  | One Four -> ()